updated media queries for contact page to ensure the background covers the form

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -793,12 +793,6 @@ legend {
         font-size: 2.5vw;
     }
 
-    #contact-us {
-
-        width: 100vw;
-        height: 69vh;
-
-    }
 
     .contact-box {
         left: -1%;
@@ -1175,12 +1169,12 @@ legend {
         height: 88vh;
     }
 
-.contact-box {
-    left: -6%;
-    width: 802px;
-    height: 79%;
-    top: 53%;
-}
+    .contact-box {
+        left: -6%;
+        width: 802px;
+        height: 95%;
+        top: 50%;
+    }
 
     input::placeholder {
         font-size: 1.3vw;
